[package]
name = "actixwebgun"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
serde_json = "1.0.41"
actix = "0.8.3"
actix-codec = "0.1.2"
actix-web = "1.0.8"
actix-web-actors = "1.0.2"
actix-files = "0.1.6"
env_logger = "0.7.1"

#set up gunjs for rust
gunrs = {path="../gunrs"}