[package]
name = "tokiogun"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
websocket = "0.23.0"
tokio = "0.1.22"
#bytes = "0.4.12"
#http = "0.1.18"
#httparse = "1.3.4"
#serde_derive = "1.0.101"
#serde_json = "1.0.40"
#time = "0.1.42"
#tokio-io = "0.1.12"

